glsl: regression affecting shader compilation time
System information
- OS: Gentoo Linux x86_64
- CPU: AMD Ryzen 7 1700
- GPU: AMD Radeon RX 5700 XT
- Kernel version: 5.6.13
- Mesa version: 4.6 (Compatibility Profile) Mesa 20.2.0-devel (git-ff98b1b5)
- Xserver version (if applicable): 1.20.8
- Desktop manager and compositor: LXQt Desktop Environment and KWin Window Manager
Describe the issue
Using GLES3, compiling shaders takes a long time.
This is very similar, if not identical to bug 109229 [2], discovered while testing a game created with Godot.
Regression
Started with 95f555a9 [1].
Any extra information would be greatly appreciated
Steps to reproduce:
- Delete '$HOME/.cache/mesa_shader_cache/'.
- Run Godot Engine - Project Manager.
- Select project '3D in 2D' (shipped with the editor on Steam at least).
- Click Edit.
- On the upper right corner, make sure GLES3 is set, and run ('Play' button) the project.
- Observe more than thirty (30) seconds required for the project to actually play, when it normally takes less than two (2) seconds.